kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: polovina/hw1:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: app
            mountPath: "/app"
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /index.html 
              port: 8000
      volumes:
        - name: app
          emptyDir: {}
